--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <h1 class="title align-text-top">Canadian <br>Youth for <br>COVID-19 <br>Support <br></h1>
             </div>
             <div class="col-lg-6 align-self-end">
-                <img src="pics/human.pn" class="img-fluid"> </div>
+                <img src="pics/human.png" class="img-fluid"> </div>
         </div>
     </div>
 
