--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </nav>
 
     <!--- Welcome Section -->
-    <div class="container-fluid padding">
+    <div class="container-fluid ap">
         <div class="row padding">
             <div class="col-md-auto align-self-start">
                 <h1 class="title align-text-top">Canadian <br>Youth for <br>COVID-19 <br>Support <br></h1>
@@ -95,10 +95,10 @@
 
 
     <!--- Meet the team -->
-    <div class="container-fluid" id="team">
+    <div class="container-fluid ap" id="team">
         <div class="row">
             <div class="col-lg-6">
-                <img src="pics/MeetTeam.png" style="width: 95%; float: left; padding-left: 2cm; padding-bottom: 2cm;"> </div>
+                <img src="pics/MeetTeam.png" style="width: 95%; float: left; padding-left: 2cm;"> </div>
         </div>
     </div>
 
@@ -109,7 +109,7 @@
     <!--- Cards -->
     <div class="container-fluid tp">
         <div class="row" style="padding-bottom: 4cm;">
-            <div class="col-md-3">
+            <div class="col-md-4 offset-md-2">
                 <img class="card-img-top team" src="pics/EXEC/Meera Mehta - President .JPG">
                 <div class="card-body">
                     <p class="card-title ct ">Meera Mehta</p>
@@ -117,7 +117,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-md-4">
                 <img class="card-img-top team" src="pics/EXEC/Nimar Soni - President .jpg">
                 <div class="card-body">
                     <p class="card-title ct">Nimar Soni</p>
@@ -125,6 +125,7 @@
                 </div>
 
             </div>
+
             <div class="col-md-3">
                 <img class="card-img-top team" src="pics/EXEC/Akanksha Dayed - Directors of S_F.png">
                 <div class="card-body">
@@ -158,30 +159,6 @@
 
             </div>
             <div class="col-md-3">
-                <img class="card-img-top team" src="pics/EXEC/Dhivya Bhaskaran- Directors of Initiatives.jpg">
-                <div class="card-body">
-                    <p class="card-title ct">Dhivya Bhaskaran</p>
-                    <p class="card-subtitle cs">Director of Initiatives</p>
-                </div>
-
-            </div>
-            <div class="col-md-3">
-                <img class="card-img-top team" src="pics/EXEC/Miranda Chen - Directors of Initiatives.jpg">
-                <div class="card-body">
-                    <p class="card-title ct">Miranda Chen</p>
-                    <p class="card-subtitle cs">Director of Initiatives</p>
-                </div>
-
-            </div>
-            <div class="col-md-3">
-                <img class="card-img-top team" src="pics/EXEC/Prabhleen Kaur - Directors of Initiatives.jpg">
-                <div class="card-body">
-                    <p class="card-title ct">Prabhleen Kaur</p>
-                    <p class="card-subtitle cs">Director of Initiatives</p>
-                </div>
-
-            </div>
-            <div class="col-md-3">
                 <img class="card-img-top team" src="pics/EXEC/70E6C96B-4047-4B53-8C5C-A77AEB3625F4 (1).JPG">
                 <div class="card-body">
                     <p class="card-title ct">Harjind Kahlon</p>
@@ -205,7 +182,31 @@
                 </div>
 
             </div>
-            <div class="col-md-3 offset-md-1">
+            <div class="col-md-3">
+                <img class="card-img-top team" src="pics/EXEC/Shiv - Director of Web and Tech .JPG">
+                <div class="card-body">
+                    <p class="card-title ct">Shivang Mistry</p>
+                    <p class="card-subtitle cs">Director of Web & Tech</p>
+                </div>
+
+            </div>
+            <div class="col-md-3">
+                <img class="card-img-top team" src="pics/EXEC/Miranda Chen - Directors of Initiatives.jpg">
+                <div class="card-body">
+                    <p class="card-title ct">Miranda Chen</p>
+                    <p class="card-subtitle cs">Director of Initiatives</p>
+                </div>
+
+            </div>
+            <div class="col-md-3">
+                <img class="card-img-top team" src="pics/EXEC/Prabhleen Kaur - Directors of Initiatives.jpg">
+                <div class="card-body">
+                    <p class="card-title ct">Prabhleen Kaur</p>
+                    <p class="card-subtitle cs">Director of Initiatives</p>
+                </div>
+
+            </div>
+            <div class="col-md-3">
                 <img class="card-img-top team" src="pics/EXEC/Anmol Dhaliwal - Directors of Promo.jpg">
                 <div class="card-body">
                     <p class="card-title ct">Anmol Dhaliwal</p>
@@ -221,14 +222,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
-                <img class="card-img-top team" src="pics/EXEC/Shiv - Director of Web and Tech .JPG">
-                <div class="card-body">
-                    <p class="card-title ct">Shivang Mistry</p>
-                    <p class="card-subtitle cs">Director of Web & Tech</p>
-                </div>
 
-            </div>
 
 
         </div>
