--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-md navbar-light bg-white fixed-top">
-        <div class="container-fluid">
+        <div class="container-fluid text-center">
             <a class="navbar-brand" href="#"><img src="pics/170x170 BLACK LOGO.png" style="width: 30%;"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
@@ -44,25 +44,36 @@
     </nav>
 
     <!--- Welcome Section -->
-    <div class="container-fluid ap">
+    <div class="container-fluid wp">
         <div class="row padding">
-            <div class="col-md-auto align-self-start">
+            <div class="col-md-auto align-self-md-start">
                 <h1 class="title align-text-top">Canadian <br>Youth for <br>COVID-19 <br>Support <br></h1>
             </div>
-            <div class="col-lg-6 align-self-end">
+            <div class="col-lg-6 align-self-md-end">
                 <img src="pics/human.png" class="img-fluid"> </div>
         </div>
     </div>
 
+    <!---Jumbotron-->
+    <div class="container-fluid">
+        <div class="row jumbotron" id="jumbo">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
+                <p class="lead jb">Sign up as an Ambassador!</p>
+                <button type="button" class="btn btn-light btn-lg font-weight-bold">Sign Up!</button>
+
+            </div>
+        </div>
+
+    </div>
 
     <!--- About Us -->
     <div class="container-fluid ap" id="aboutus">
-        <div class="row padding">
-            <div class="col-lg-6 align-self-start">
+        <div class="row padding d-flex">
+            <div class="col-lg-6 align-self-sm-center order-sm-1 align-self-md-start p-2">
                 <p class="para">Canadian Youth for COVID-19 Support is a group <br>of youth working towards providing individuals <br>with an opportunity to support local communities <br>and families during the pandemic. CYCS <br>distributes handwritten notes, masks
                     and seeds <br>to neighbourhoods and takes donations to help <br>the frontline workers at the William Osler Health <br>System.</p>
             </div>
-            <div class="col-lg-6 align-self-end">
+            <div class="col-lg-6 align-self-sm-center order-sm-2 align-self-end p-2">
                 <img src="pics/aboutus.png" style="width: 75%; float: left; padding-left: 2cm;"> </div>
         </div>
     </div>
@@ -83,13 +94,13 @@
     <!--- Our Initiatives -->
     <div class="container-fluid ap" id="ourinit">
         <div class="row padding">
-            <div class="col-lg-6 align-self-start">
+            <div class="col-xs-12 col-lg-6 align-self-start">
                 <h3 style="padding-left: 3cm;">Handwritten Notes
                 </h3>
                 <p class="para">Those living in long term care homes, especially seniors, <br>find it difficult to stay positive during these unprecedented <br>times. Without the much-needed support of friends and <br>family, mental health is at an all-time low. However,
                     CYCS <br>hopes to reverse this pattern by providing seniors with the <br>support they need through the delivery of handwritten <br>notes.</p>
             </div>
-            <div class="col-lg-6 align-self-end">
+            <div class="col-xs-12 col-lg-6 align-self-end">
                 <img src="pics/initiatives.png" style="width: 75%; float: left; padding-left: 2cm;"> </div>
         </div>
     </div>
@@ -98,7 +109,7 @@
     <!--- Meet the team -->
     <div class="container-fluid ap" id="team">
         <div class="row">
-            <div class="col-lg-6">
+            <div class="col-xs-12 col-sm-12 col-lg-6">
                 <img src="pics/MeetTeam.png" style="width: 95%; float: left; padding-left: 2cm;"> </div>
         </div>
     </div>
@@ -108,9 +119,9 @@
 
 
     <!--- Cards -->
-    <div class="container-fluid tp">
+    <div class="container-fluid">
         <div class="row" style="padding-bottom: 4cm;">
-            <div class="col-md-4 offset-md-2">
+            <div class="col-xs-12 col-sm-12 col-md-4 offset-md-2 col-lg-4 col-xl-4 offset-lg-2 offset-xl-2">
                 <img class="card-img-top team" src="pics/EXEC/Meera Mehta - President .JPG">
                 <div class="card-body">
                     <p class="card-title ct ">Meera Mehta</p>
@@ -118,7 +129,7 @@
                 </div>
 
             </div>
-            <div class="col-md-4">
+            <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
                 <img class="card-img-top team" src="pics/EXEC/Nimar Soni - President .jpg">
                 <div class="card-body">
                     <p class="card-title ct">Nimar Soni</p>
@@ -127,7 +138,7 @@
 
             </div>
 
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Akanksha Dayed - Directors of S_F.png">
                 <div class="card-body">
                     <p class="card-title ct">Akanksha Dayed</p>
@@ -135,7 +146,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Armaan Gill - Directors of F_S.jpg">
                 <div class="card-body">
                     <p class="card-title ct">Armaan Gill</p>
@@ -143,7 +154,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Ishnoor Rattan- Directors of F_S.jpg">
                 <div class="card-body">
                     <p class="card-title ct">Ishnoor Rattan</p>
@@ -151,7 +162,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Gurjot Jhutty- Directors of F&S (1).jpg">
                 <div class="card-body">
                     <p class="card-title ct">Gurjot Jhutty</p>
@@ -159,7 +170,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/70E6C96B-4047-4B53-8C5C-A77AEB3625F4 (1).JPG">
                 <div class="card-body">
                     <p class="card-title ct">Harjind Kahlon</p>
@@ -167,7 +178,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Riya Tangri- Directors of Ambassadors.jpg">
                 <div class="card-body">
                     <p class="card-title ct">Riya Tangri</p>
@@ -175,7 +186,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Zuhayr Khan- Directors of ambassadors.jpeg">
                 <div class="card-body">
                     <p class="card-title ct">Zuhayr Khan</p>
@@ -183,7 +194,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Shiv - Director of Web and Tech .JPG">
                 <div class="card-body">
                     <p class="card-title ct">Shivang Mistry</p>
@@ -191,7 +202,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Miranda Chen - Directors of Initiatives.jpg">
                 <div class="card-body">
                     <p class="card-title ct">Miranda Chen</p>
@@ -199,7 +210,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Prabhleen Kaur - Directors of Initiatives.jpg">
                 <div class="card-body">
                     <p class="card-title ct">Prabhleen Kaur</p>
@@ -207,7 +218,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Anmol Dhaliwal - Directors of Promo.jpg">
                 <div class="card-body">
                     <p class="card-title ct">Anmol Dhaliwal</p>
@@ -215,7 +226,7 @@
                 </div>
 
             </div>
-            <div class="col-md-3">
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Vidhi Pandya - Directors of Promotions.JPG">
                 <div class="card-body">
                     <p class="card-title ct">Vidhi Pandya</p>
