--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     <!---Jumbotron-->
     <div class="container-fluid">
-        <div class="row jumbotron" id="jumb0">
+        <div class="row jumbotron" id="jumbo">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
                 <p class="lead jb">Sign up as an Ambassador!</p>
                 <button type="button" class="btn btn-light btn-lg font-weight-bold">Sign Up!</button>
