--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!--- Welcome Section -->
     <div class="container-fluid wp">
         <div class="row padding">
-            <div class="col-md-auto align-self-md-start">
+            <div class="col-auto align-self-md-start">
                 <h1 class="title align-text-top">Canadian <br>Youth for <br>COVID-19 <br>Support <br></h1>
             </div>
             <div class="col-lg-6 align-self-md-end">
