--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!--- Our Mission-->
     <div class="container-fluid ap" id="aboutus">
         <div class="row padding">
-            <div class="col-lg-6 align-self-end">
+            <div class="col-lg-6 align-self-sm-center align-self-end">
                 <img src="pics/mission.png" style="width: 75%; float: right; padding-right: 2cm;"> </div>
             <div class="col-lg-6 align-self-start">
                 <p class="para">Our mission is to brighten the lives of individuals and <br>families who are struggling through these unprecedented <br>times with the involvement of youth. Engaging youth in <br>mental health activities throughout the course of this <br>pandemic
