--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     <!--- About Us -->
     <div class="container-fluid ap" id="aboutus">
         <div class="row padding d-flex">
-            <div class="col-lg-6 align-self-sm-center order-sm-1 align-self-md-start p-2">
+            <div class="col-lg-6 align-self-xs-center order-xs-2 align-self-md-start p-2">
                 <p class="para">Canadian Youth for COVID-19 Support is a group <br>of youth working towards providing individuals <br>with an opportunity to support local communities <br>and families during the pandemic. CYCS <br>distributes handwritten notes, masks
                     and seeds <br>to neighbourhoods and takes donations to help <br>the frontline workers at the William Osler Health <br>System.</p>
             </div>
-            <div class="col-lg-6 align-self-sm-center order-sm-2 align-self-end p-2">
+            <div class="col-lg-6 align-self-xs-center order-xs-1 align-self-md-end p-2">
                 <img src="pics/aboutus.png" style="width: 75%; float: left; padding-left: 2cm;"> </div>
         </div>
     </div>
