--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
     <!--- About Us -->
     <div class="container-fluid ap" id="aboutus">
         <div class="row padding d-flex">
-            <div class="col-lg-6 align-self-xs-center order-xs-2 align-self-md-start p-2">
+            <div class="col-6 align-self-xs-center order-xs-2 align-self-md-start p-2">
                 <p class="para">Canadian Youth for COVID-19 Support is a group <br>of youth working towards providing individuals <br>with an opportunity to support local communities <br>and families during the pandemic. CYCS <br>distributes handwritten notes, masks
                     and seeds <br>to neighbourhoods and takes donations to help <br>the frontline workers at the William Osler Health <br>System.</p>
             </div>
-            <div class="col-lg-6 align-self-xs-center order-xs-1 align-self-md-end p-2">
+            <div class="col-6 align-self-xs-center order-xs-1 align-self-md-end p-2">
                 <img src="pics/aboutus.png" style="width: 75%; float: left; padding-left: 2cm;"> </div>
         </div>
     </div>
@@ -82,9 +82,9 @@
     <!--- Our Mission-->
     <div class="container-fluid ap" id="aboutus">
         <div class="row padding">
-            <div class="col-lg-6 align-self-sm-center align-self-end">
+            <div class="col-lg-6 align-self-xs-center align-self-md-end">
                 <img src="pics/mission.png" style="width: 75%; float: right; padding-right: 2cm;"> </div>
-            <div class="col-lg-6 align-self-start">
+            <div class="col-lg-6 align-self-xs-center align-self-md-start">
                 <p class="para">Our mission is to brighten the lives of individuals and <br>families who are struggling through these unprecedented <br>times with the involvement of youth. Engaging youth in <br>mental health activities throughout the course of this <br>pandemic
                     will improve their livelihoods along with those of <br>the community members and the health care heroes they <br>support.</p>
             </div>
