--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
     <!--- Our Mission-->
     <div class="container-fluid ap" id="aboutus">
         <div class="row padding">
-            <div class="col-lg-6 align-self-xs-center align-self-md-end">
+            <div class="col-sm-6 align-self-xs-center align-self-md-end">
                 <img src="pics/mission.png" style="width: 75%; float: right; padding-right: 2cm;"> </div>
-            <div class="col-lg-6 align-self-xs-center align-self-md-start">
+            <div class="col-sm-6 align-self-xs-center align-self-md-start">
                 <p class="para">Our mission is to brighten the lives of individuals and <br>families who are struggling through these unprecedented <br>times with the involvement of youth. Engaging youth in <br>mental health activities throughout the course of this <br>pandemic
                     will improve their livelihoods along with those of <br>the community members and the health care heroes they <br>support.</p>
             </div>
