--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="row jumbotron" id="jumbo">
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
                 <p class="lead jb">Sign up as an Ambassador!</p>
-                <button type="button" class="btn btn-light btn-lg font-weight-bold">Sign Up!</button>
+                <a type="button" class="btn btn-light btn-lg font-weight-bold" href="https://forms.gle/mA3LKWptLqDFuAEW6">Sign Up!</a>
 
             </div>
         </div>
@@ -85,7 +85,7 @@
             <div class="col-sm-6 align-self-xs-center align-self-md-end">
                 <img src="pics/mission.png" style="width: 75%; float: right; padding-right: 2cm;"> </div>
             <div class="col-sm-6 align-self-xs-center align-self-md-start">
-                <p class="para">Our mission is to brighten the lives of individuals and <br>families who are struggling through these unprecedented <br>times with the involvement of youth. Engaging youth in <br>mental health activities throughout the course of this <br>pandemic
+                <p class="para text-xs-center">Our mission is to brighten the lives of individuals and <br>families who are struggling through these unprecedented <br>times with the involvement of youth. Engaging youth in <br>mental health activities throughout the course of this <br>pandemic
                     will improve their livelihoods along with those of <br>the community members and the health care heroes they <br>support.</p>
             </div>
         </div>
