Added New Execs (1/2)

--- a/index.html
+++ b/index.html
@@ -187,18 +187,26 @@
 
             </div>
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-                <img class="card-img-top team" src="pics/EXEC/Zuhayr Khan- Directors of ambassadors.jpeg">
+                <img class="card-img-top team" src="pics/EXEC/Raneem Elbarbary- Director of Ambassadors.png">
                 <div class="card-body">
-                    <p class="card-title ct">Zuhayr Khan</p>
+                    <p class="card-title ct">Raneem Elbarbary</p>
                     <p class="card-subtitle cs">Director of Ambassadors</p>
                 </div>
 
             </div>
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-                <img class="card-img-top team" src="pics/EXEC/Shiv - Director of Web and Tech .JPG">
+                <img class="card-img-top team" src="pics/EXEC/Yashasvi Pradhan - Directors of Ambassdor.png">
                 <div class="card-body">
-                    <p class="card-title ct">Shivang Mistry</p>
-                    <p class="card-subtitle cs">Director of Web & Tech</p>
+                    <p class="card-title ct">Yashasvi Prdhan</p>
+                    <p class="card-subtitle cs">Director of Ambassadors</p>
+                </div>
+
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <img class="card-img-top team" src="pics/EXEC/Erica He - Director of Initiatives.png">
+                <div class="card-body">
+                    <p class="card-title ct">Erica He</p>
+                    <p class="card-subtitle cs">Director of Initiatives</p>
                 </div>
 
             </div>
@@ -231,6 +239,14 @@
                 <div class="card-body">
                     <p class="card-title ct">Vidhi Pandya</p>
                     <p class="card-subtitle cs">Director of Promotions</p>
+                </div>
+
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <img class="card-img-top team" src="pics/EXEC/Shiv - Director of Web and Tech .JPG">
+                <div class="card-body">
+                    <p class="card-title ct">Shivang Mistry</p>
+                    <p class="card-subtitle cs">Director of Web & Tech</p>
                 </div>
 
             </div>
