Added New Execs (2/2)

--- a/index.html
+++ b/index.html
@@ -203,6 +203,14 @@
 
             </div>
             <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <img class="card-img-top team" src="pics/EXEC/Deema Sidek - Directors of Initiatives.jpg">
+                <div class="card-body">
+                    <p class="card-title ct">Deema Sidek</p>
+                    <p class="card-subtitle cs">Director of Initiatives</p>
+                </div>
+
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
                 <img class="card-img-top team" src="pics/EXEC/Erica He - Director of Initiatives.png">
                 <div class="card-body">
                     <p class="card-title ct">Erica He</p>
@@ -239,6 +247,14 @@
                 <div class="card-body">
                     <p class="card-title ct">Vidhi Pandya</p>
                     <p class="card-subtitle cs">Director of Promotions</p>
+                </div>
+
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
+                <img class="card-img-top team" src="pics/EXEC/Aneri Patel - Creative Director.png">
+                <div class="card-body">
+                    <p class="card-title ct">Aneri Patel</p>
+                    <p class="card-subtitle cs">Creative Director</p>
                 </div>
 
             </div>
